# web_traffic_forecasting

./: .gitignore  README.md  README.rst  pyproject.toml  requirements.txt
.dvc/: config
tests/: test_web_traffic_forecasting.py
web_traffic_forecasting/notebooks/: main.ipynb
web_traffic_forecasting/resources/: data.dvc
